# TicTacToe

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/globals/: gamestate.h  key.h  token.h
engine/handler/: gameengine.cpp  gameengine.h
engine/objects/: coordinate.h  field.cpp  field.h  game.cpp  game.h  player.h
engine/view/: viewmanager.cpp  viewmanager.h
